--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "gsap": "^3.12.2",
     "next": "13.4.12",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.27",
