--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "react-scroll": "^1.8.9",
+    "react-twitter-widgets": "^1.11.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
