--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.30.6",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/image": "^2.10.0",
+    "@editorjs/nested-list": "^1.4.3",
+    "@editorjs/table": "^2.4.2",
+    "@editorjs/underline": "^1.2.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
