finish the posts api

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ SMTP_HOST=smtp.mailtrap.io
 SMTP_PORT=2525
 SMTP_USER=your_smtp_user
 SMTP_PASS=your_smtp_pass
+CLOUDINARY_CLOUD_NAME=dbnn7inbq
+CLOUDINARY_API_SECRET=itXQbPRJOh1Yey_k62myegKJI24
+CLOUDINARY_API_KEY=411827952278416
+
