--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@editorjs/table": "^2.4.2",
     "@editorjs/underline": "^1.2.1",
     "@prisma/client": "^6.2.1",
+    "@tanstack/react-query": "^5.65.1",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
@@ -30,6 +31,7 @@
     "eslint-config-next": "^14.2.23",
     "gsap": "^3.12.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.474.0",
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
     "nodemailer": "^6.10.0",
