update the UI, finished almost everything

--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "prisma:migrate-prod": "prisma migrate deploy"
   },
   "engines": {
-    "node": ">=20.0.0",
-    "pnpm": ">=9.0.0",
-    "yarn": "please-use-pnpm",
-    "npm": "please-use-pnpm"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "@editorjs/editorjs": "^2.30.6",
@@ -39,16 +36,18 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.474.0",
     "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "next": "^14.2.23",
     "nodemailer": "^6.10.0",
     "postcss": "8.4.27",
     "react": "18",
     "react-dom": "18",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.1",
     "react-quill": "^2.0.0",
     "react-scroll": "^1.8.9",
     "react-twitter-widgets": "^1.11.0",
+    "sharp": "^0.33.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
